--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.15
+@version     1.1.16
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -277,17 +277,24 @@ ul + ul {
   
 /* More compact [[Special:PageTranslation]] */
 body.mw-special-PageTranslation #mw-content-text li > div {
-  display: inline; 
   float: right;
   font-size: 0.8em;
 }
 body.mw-special-PageTranslation #mw-content-text li > div::before {
-  display: inline;
   content: "(";
 }
 body.mw-special-PageTranslation #mw-content-text li > div::after {
-  display: inline;
   content: ")";
+}
+
+/* Ignore fuzzybot in history pages */
+a[href="/wiki/User:FuzzyBot"] {
+  opacity: 0.4;
+}
+
+/* Reduce visibility of translation indicators */
+.mw-pt-progress:after {
+  opacity: 0.6;
 }
   
 }
