--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.08
+@version     1.0.09
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -307,8 +307,14 @@ html {
   top: 55px !important;
   display: block
 }
+@media screen {
+  .vector-feature-zebra-design-disabled .vector-toc-landmark {
+    display: block;
+  }
+}
 
 /* Fix the jumping sticky-TOC when scrolling */
+ .vector-feature-zebra-design-disabled .vector-sticky-pinned-container,
 .vector-feature-zebra-design-disabled.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-clientpref-1 #vector-toc-pinned-container,    
 .vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container, 
 .client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container,
@@ -317,7 +323,6 @@ html {
 .vector-feature-zebra-design-enabled.client-js.vector-sticky-header-enabled .vector-sticky-pinned-container,
 .vector-feature-zebra-design-enabled.vector-feature-toc-pinned-clientpref-1 .vector-column-start > .vector-toc-landmark {
   top: 85px !important;
-  position: sticky !important;
 }
 /* .vector-feature-page-tools-enabled #vector-toc-pinned-container .vector-toc {
   padding-top: 0 !important;
@@ -367,7 +372,7 @@ html {
   #vector-page-titlebar-toc {
     position: fixed !important;
     top: 56px !important;
-    left: 11px;
+    left: 3px;
     border: 1px solid #eaecf0;
     background: white !important;
     z-index: 1;
@@ -380,7 +385,9 @@ html {
     background-color: white !important;
     opacity: 1;
   }
-  
+.vector-feature-zebra-design-disabled .vector-dropdown .vector-dropdown-checkbox {
+  left:4px
+}
 .vector-dropdown > .vector-menu-content {
   padding: 0 !important;
 }
@@ -392,11 +399,6 @@ html {
     padding-left: 155px
   }
 }
-  
-/* ToC-button shrink */
-#vector-page-titlebar-toc-label {
-  padding: 0.4em
-}
 
 @media screen and (max-width: 999px) {
   .vector-feature-zebra-design-disabled.client-js .vector-below-page-title .vector-page-titlebar-toc {
@@ -404,10 +406,10 @@ html {
   }
 }
 
-/* Reduce ToC height for logged-out view */
+/* Reduce ToC height for logged-out view 
 #vector-toc {
   max-height: 89vh !important;
-}
+}*/
 
 /* TOC-button nudge
 @media screen and (max-width: 999px) {
@@ -532,6 +534,11 @@ html {
 }
 .vector-feature-page-tools-pinned-enabled .mw-body {
   column-gap: 20px !important;
+}
+
+/* Fix sitenotice margin */
+#siteNotice {
+  top: 60px;
 }
 
 /* Fix for banners in small windows */
@@ -833,11 +840,6 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   border-bottom: unset;
 }
 
-/* Fix sitenotice margin */
-#siteNotice {
-  top: 65px;
-}
-
 /* Fix sticky table-headers */
 .vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .mw-sticky-header-element {
   top: 80px !important;
@@ -993,6 +995,11 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   .vector-user-links .mw-portlet-vector-user-menu-overflow .user-links-collapsible-item {
     display: unset;
   }
+}
+
+/* remove TOC bottom border gradient background */
+.vector-feature-zebra-design-disabled .vector-sticky-pinned-container::after {
+background: unset
 }
 
 }
