--- a/dark.user.css
+++ b/dark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wiki DARK
 @namespace   StylishThemes
-@version     1.0.8
+@version     1.0.9
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/dark.user.css
 @license     CC-BY-SA-4.0
@@ -86,6 +86,7 @@ html .media-viewer .image img,
 html .media-viewer .mw-file-description img,
 html .mw-kartographer-map,
 html .mw-kartographer-mapDialog-map,
+html .oo-ui-searchWidget-results .oo-ui-iconElement-icon,
 html .list-thumb,
 html .ext-related-articles-card-list .ext-related-articles-card-thumb {
 	filter: invert( 1 ) hue-rotate( 180deg );
@@ -188,8 +189,8 @@ html .vectorTabs li.new a {
 /* ::: Special Element Treatments ::: */
 /* Image thumbnails */
 html .thumbimage,
-html figure[typeof~='mw:File/Thumb'] > *:first-child > *:first-child:not( .mw-broken-media ),
-html figure[typeof~='mw:File/Frame'] > *:first-child > *:first-child:not( .mw-broken-media ) {
+html figure[typeof~='mw:File/Thumb'] > :not(figcaption) .mw-file-element,
+html figure[typeof~='mw:File/Frame'] > :not(figcaption) .mw-file-element {
 	border: 0;
 }
 
@@ -243,7 +244,7 @@ html .branding-box img {
 
 @-moz-document url-prefix() {
     body {
-        background: #363636 !important;
+        background: #000;
     }
 }
 
@@ -255,6 +256,7 @@ html .branding-box img {
 	}
 }
 
+
 /* Quiddity's extra background overrides */
 .mw-logo-icon {
   background: black;
@@ -263,5 +265,31 @@ html .branding-box img {
   background: #e1e1e1 !important;
 }
 body {background: #e1e1e1 !important;}
+  
+  /* Grey background for main areas */
+  body, 
+  .vector-feature-zebra-design-disabled body, 
+  .mw-page-container,
+  #vector-toc {
+    background: #e3e3e5 !important;
+  }
+  
+  /* Grey Sticky Headers */
+  .mw-header {
+    background-color: #eaecf0 !important;
+    border-bottom: 1px solid #a2a9b1 !important;
+  }
+  .vector-page-toolbar, 
+  .vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
+    background-color: #f8f9fa !important;
+  }
+  
+  /* Grey tables */
+  table.wikitable > * > tr > td {
+    background-color: #e9e9e9;
+  }
+  table.wikitable > * > tr > th {
+    background-color: #cdcdcd;
+  }
 
 }
