--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.12
+@version     1.0.13
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -326,14 +326,15 @@ html {
 /* .vector-feature-page-tools-enabled #vector-toc-pinned-container .vector-toc {
   padding-top: 0 !important;
 } */
-#mw-panel-toc {
+.vector-column-start {
   margin-top: -50px !important;
 }
- .vector-feature-zebra-design-enabled.client-js.vector-sticky-header-enabled .vector-pinned-container {
- max-height: none
- }
 
 /* ???
+.vector-feature-zebra-design-enabled.client-js.vector-sticky-header-enabled .vector-pinned-container {
+  max-height: none
+}
+
 .vector-toc-contents {
   width: 12.5em;
 } 
@@ -712,11 +713,7 @@ html.vector-feature-zebra-design-enabled {
   top: 54px;
 }
 .vector-feature-zebra-design-enabled .vector-sticky-pinned-container {
-  overflow: unset;
   background-color: unset;
-}
-.vector-feature-zebra-design-enabled .vector-sticky-pinned-container::after {
-  background: unset;
 }
 .vector-feature-zebra-design-enabled .vector-pinned-container {
   background-color: unset;
@@ -1005,6 +1002,7 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 }
 
 /* remove TOC bottom border gradient background */
+.vector-feature-zebra-design-enabled .vector-sticky-pinned-container::after,
 .vector-feature-zebra-design-disabled .vector-sticky-pinned-container::after {
 background: unset
 }
@@ -1016,6 +1014,10 @@ background: unset
 
 #p-twinkle-dropdown-label {
   padding-top: 5px;
+}
+
+.cdx-text-input {
+  min-width: unset;
 }
 
 }
