--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.16
+@version     1.0.17
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -119,6 +119,10 @@ domain("patchdemo.wmflabs.org") {
 }
 .vector-feature-zebra-design-enabled .mw-page-container {
   margin: 0;
+  min-width: unset;
+}
+.vector-feature-zebra-design-enabled .mw-page-container {
+  padding-right: 15px;
 }
   
 /* Fix watchstar which got misaligned */
@@ -133,7 +137,7 @@ domain("patchdemo.wmflabs.org") {
   
 /* Nudge the personal bar inwards */
 #vector-user-links-dropdown {
-  margin-right: 1em;
+  margin-right: 1px;
 }
 
 /* Gap above the log-out button */
@@ -646,6 +650,9 @@ html {
 #p-search {
   margin-left: -5px;
 }
+.cdx-typeahead-search--show-thumbnail.cdx-typeahead-search--auto-expand-width:not(.cdx-typeahead-search--expanded) {
+  margin-left: 0;
+}
 /* Old attempt */
 /* 
 .cdx-typeahead-search .cdx-typeahead-search--show-thumbnail .cdx-typeahead-search--auto-expand-width {
@@ -713,7 +720,8 @@ html.vector-feature-zebra-design-enabled {
   }
 }
 .vector-feature-zebra-design-enabled .vector-header-container .mw-header {
-  max-width: unset !important;
+  max-width: unset;
+  min-width: unset;
   padding-right: 0;
   padding-left: 15px;
 }
@@ -725,6 +733,7 @@ html.vector-feature-zebra-design-enabled {
 }
 .vector-feature-zebra-design-enabled .vector-pinned-container {
   background-color: unset;
+  padding-right: 0 !important;
 }
 
 /* Fixes for mobile-size */
@@ -870,6 +879,10 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   top: 85px !important;
   margin-top: -10px;
 }
+
+.vector-feature-zebra-design-enabled.vector-feature-page-tools-pinned-enabled .vector-column-end {
+  width: unset !important;
+}
   
 /* Grey Sticky Headers  */
 .mw-header {
@@ -911,28 +924,52 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 /* Replace toolbar text with icons at small widths */
 @media screen and (max-width: 699px) {
   #ca-addsection {
+    margin: 2px;
+  }
+  #ca-addsection {
     -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px; width: 10px; font-size: 1px; color: white; text-decoration: none;
   }
   #ca-view {
     display: none;
   }
+  #ca-view-foreign {
+    margin: 2px;
+  }
   #ca-view-foreign > a {
     -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-wikimedia&image=logoMetaWiki&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-wikimedia&image=logoMetaWiki&format=original) no-repeat 0 0/15px; background-color: #26ae45; padding: 15px 10px 5px 10px; width: 10px; font-size: 1px; color: white; text-decoration: none;
+  }
+  #ca-ve-edit {
+    margin: 2px;
   }
   #ca-ve-edit > a {
     -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
   }
+  #ca-edit {
+    margin: 2px;
+  }
   #ca-edit > a {
     -webkit-mask: url(g/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; font-size: 1px; color: white; text-decoration: none;
+  }
+  #ca-viewsource {
+    margin: 2px;
   }
   #ca-viewsource > a {
     -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
   }
+  #ca-history {
+    margin: 2px;
+  }
   #ca-history > a {
-    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
+    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 1px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
+  }
+  #pt-userpage-2 {
+    margin: 2px;
   }
   #pt-userpage-2 > a, #pt-createaccount-2 > a {
     -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-user&image=userAvatarOutline&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-user&image=userAvatarOutline&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px 10px 10px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none; margin: 0 0 0 15px;
+  }
+  #pt-login-2 {
+    margin: 2px;
   }
   #pt-login-2 > a {
     -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=logIn&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=logIn&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
@@ -974,10 +1011,10 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   }
   #ca-watch,
   #ca-unwatch {
-    margin-top: -5px !important;
+    margin-top: -8px !important;
   }
-  
 }
+
 /* Fix mislaigned icons in wide windows */
   #ca-wikilove > a {
     margin-top: -4px !important;
@@ -985,7 +1022,7 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   }
   #ca-watch,
   #ca-unwatch {
-    margin-top: -6px !important;
+    margin-top: -8px !important;
   }
   .vector-icon.mw-ui-icon-wikimedia-heart, 
   .vector-icon.mw-ui-icon-wikimedia-star, 
