--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.17
+@version     1.1.18
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -297,6 +297,14 @@ a[href="/wiki/User:FuzzyBot"] {
 /* Reduce visibility of translation indicators */
 .mw-pt-progress:after {
   opacity: 0.6;
+}
+
+/* fix navpop's meta-menu size */
+.popup_drop > a {
+  width: 17px;
+  height: 17px;
+  overflow: hidden;
+  display: inline-block;
 }
   
 }
