--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -114,14 +114,11 @@ domain("patchdemo.wmflabs.org") {
 }
   
 /* Fix min-width */
-.vector-feature-zebra-design-disabled .mw-page-container {
-  min-width: unset;
-}
-.vector-feature-zebra-design-enabled .mw-page-container {
+.vector-feature-zebra-design-disabled .mw-page-container, 
+.vector-feature-zebra-design-enabled .mw-page-container,
+.mw-page-container {
   margin: 0;
   min-width: unset;
-}
-.vector-feature-zebra-design-enabled .mw-page-container {
   padding-right: 15px;
 }
   
@@ -163,7 +160,8 @@ domain("patchdemo.wmflabs.org") {
   padding-left: 16px;
 }
 /* Hide the default sticky header */
-.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sticky-header-container {
+.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sticky-header-container,
+.client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sticky-header-container {
   display: none;
 }
 
@@ -197,7 +195,7 @@ html {
 /* Remove header whitespace */
 .mw-header {
   margin: 0 !important;
-  padding-top: 0;
+  padding: 0 0 0 20px !important;
   height: 54px !important;
 }
 
@@ -297,7 +295,7 @@ html {
 .vector-toc .vector-toc-list-item-active > .vector-toc-link .vector-toc-text, .vector-toc .vector-toc-level-1-active:not(.vector-toc-list-item-expanded) > .vector-toc-link .vector-toc-text, .vector-toc .vector-toc-list-item-active.vector-toc-level-1-active > .vector-toc-link .vector-toc-text {
   width: unset;
 }
-.vector-feature-zebra-design-disabled .vector-toc .vector-toc-list-item-active > .vector-toc-link .vector-toc-text {
+.vector-toc .vector-toc-list-item-active > .vector-toc-link .vector-toc-text {
   width: unset;
 }
 
@@ -316,26 +314,23 @@ html {
 
 /* 3.2 Move the boxes around */
 
-/* Move button for collapsed ToC down below the sticky-header, and add border */
-.client-js .vector-below-page-title .vector-page-titlebar-toc {
-  top: 55px !important;
-}
-@media screen {
-  .vector-feature-zebra-design-disabled .vector-toc-landmark {
-    display: block;
-  }
-}
 
 /* Fix the jumping sticky-TOC when scrolling */
- .vector-feature-zebra-design-disabled .vector-sticky-pinned-container,
-.vector-feature-zebra-design-disabled.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-clientpref-1 #vector-toc-pinned-container,    
+.vector-feature-zebra-design-disabled .vector-sticky-pinned-container,
+.vector-sticky-pinned-container,
+.vector-feature-zebra-design-disabled.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-clientpref-1 #vector-toc-pinned-container, 
+.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-clientpref-1 #vector-toc-pinned-container, 
 .vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container, 
-.client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container,
+.client-js.vector-sticky-header-enabled.vector-feature-toc-pinned-enabled #vector-toc-pinned-container, 
+
 .vector-feature-toc-pinned-enabled #vector-toc-pinned-container, 
 .vector-feature-zebra-design-enabled .vector-pinned-container,
+.vector-pinned-container,
 .vector-feature-zebra-design-enabled.client-js.vector-sticky-header-enabled .vector-sticky-pinned-container,
-.vector-feature-zebra-design-enabled.vector-feature-toc-pinned-clientpref-1 .vector-column-start > .vector-toc-landmark {
-  top: 85px !important;
+.client-js.vector-sticky-header-enabled .vector-sticky-pinned-container,
+.vector-feature-zebra-design-enabled.vector-feature-toc-pinned-clientpref-1 .vector-column-start > .vector-toc-landmark,
+.vector-feature-toc-pinned-clientpref-1 .vector-column-start > .vector-toc-landmark {
+  top: 95px !important;
 }
 /* .vector-feature-page-tools-enabled #vector-toc-pinned-container .vector-toc {
   padding-top: 0 !important;
@@ -655,6 +650,7 @@ padding-top: 10px;
 @media (min-width: 300px) {
   .mw-logo-icon {
     display: block;
+    width: unset;
   }
 }
   
@@ -676,7 +672,7 @@ padding-top: 10px;
   max-width: none;
 }
 .cdx-text-input__input {
-  min-width:50px;
+  min-width: unset !important;
 }
 .mw-logo {
   min-width: 0;
@@ -759,7 +755,8 @@ html.vector-feature-zebra-design-enabled {
   --padding-horizontal-content: 2px;
   }
 }
-.vector-feature-zebra-design-enabled .vector-header-container .mw-header {
+.vector-feature-zebra-design-enabled .vector-header-container .mw-header,
+.vector-header-container .mw-header {
   max-width: 100vw;
   min-width: unset;
   padding-right: 0;
@@ -919,7 +916,8 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 .vector-feature-zebra-design-enabled.client-js.vector-sticky-header-enabled.vector-feature-page-tools-pinned-enabled .vector-page-tools-landmark,
 .vector-feature-zebra-design-enabled .vector-column-end .vector-page-tools-landmark,
 .vector-feature-zebra-design-disabled .vector-column-end,
-.vector-feature-zebra-design-enabled .vector-column-end {
+.vector-feature-zebra-design-enabled .vector-column-end, 
+.vector-column-end {
   top: 85px !important;
   margin-top: -10px;
 }
@@ -1096,12 +1094,14 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 
 /* remove TOC bottom border gradient background */
 .vector-feature-zebra-design-enabled .vector-sticky-pinned-container::after,
-.vector-feature-zebra-design-disabled .vector-sticky-pinned-container::after {
+.vector-feature-zebra-design-disabled .vector-sticky-pinned-container::after,
+.vector-sticky-pinned-container::after{
 background: unset
 }
 
 /* test toc fixes */
-.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sticky-header-container {
+.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sticky-header-container,
+.client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sticky-header-container{
   display: block !important;
 }
 
